crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_throw_in_conditional.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 4047
expression: eval_pkl(source)
---
{
  "validate": "<function>",
  "r1": 42
}
