crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_typealias_comprehensive.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 4567
expression: eval_pkl(source)
---
{
  "name": "Pigeon",
  "age": 42,
  "value": "hello",
  "value2": 42
}
