crates/rpkl-runtime/tests/snapshots/snapshot_tests__when_else_generator.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2213
expression: eval_pkl(source)
---
{
  "isDev": false,
  "config": {
    "name": "app",
    "logLevel": "warn",
    "verboseErrors": false
  }
}
