crates/rpkl-runtime/tests/snapshots/snapshot_tests__when_generator_false.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "debug": false,
  "config": {
    "name": "app",
    "logLevel": "info"
  }
}
