crates/rpkl-runtime/tests/snapshots/snapshot_tests__when_generator_true.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "debug": true,
  "config": {
    "name": "app",
    "logLevel": "debug",
    "verbose": true
  }
}
