crates/rpkl-runtime/tests/snapshots/snapshot_tests__when_generator_with_for.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "debug": true,
  "config": {
    "host": "localhost",
    "logLevel": "DEBUG",
    "verbose": true
  }
}
